[tool.poetry]
name = "django-ninja-apikey-mpirnat"
version = "0.2.1"
description = ""
authors = [
    "Maximilian Wassink <wassink.maximilian@protonmail.com>",
    "Mike Pirnat <mpirnat@gmail.com>"
]
readme = "README.md"
packages = [{include = "ninja_apikey"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4"
django-ninja = "^0.22.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
black = "^23.3.0"
ruff = "^0.0.277"
mypy = "^1.4.1"
django-stubs = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
